# rune

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: entries.txt
src/: main.rs
